--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation libs.material
     implementation libs.androidx.activity
     implementation libs.androidx.constraintlayout
+    implementation libs.firebase.storage.ktx
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
@@ -50,6 +51,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.firebase:firebase-storage:20.2.0'
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
 }
